src/components/bookmarks/addBookmark/addBookmark.css
@import '../../app/variablesV2.css';
@import '../../app/mixins.css';

.wrapper {
  display: flex;
  justify-content: center;
  width: 100%;

  & .content {
    width: 720px;

    & header {
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    & h1 {
      @mixin headingLarge;
    }
  }
}

.formHolder {
  display: flex;
  flex-direction: column;
  padding: 20px;

  & > .buttonHolder {
    display: flex;
    margin: 16px auto 30px;
    width: var(--footer-button-width);

    & button {
      display: block;
      width: 100%;
    }
  }

  & .fieldGroup {
    display: block;
    position: relative;

    & .avatar {
      left: 16px;
      position: absolute;
      top: 12px;
    }
  }

  & label {
    display: block;
    margin-bottom: 24px;

    & > .label {
      @mixin contentNormal bold;

      color: var(--color-maastricht-blue);
      display: block;
      margin-bottom: 12px;
    }

    & .input[name="address"] {
      padding-left: 48px;
    }

    & .input:focus ~ .feedback {
      opacity: 1 !important;
    }
  }

  & .feedback {
    margin-top: 5px;
    min-height: 44px;
    opacity: 0;
    transition: none;

    &.error {
      opacity: 1;
    }

    &:not(:global(.error)) {
      padding-left: 0;
      padding-right: 0;
    }
  }
}

